--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.hibernate.ddl-auto = update
 
 app.allow.origins=https://ptvescort.com
+
+mysql://b0ecf1ad367e57:c079c2bf@us-cdbr-east-02.cleardb.com/heroku_94182d04f0a0039?reconnect=true
