--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,5 @@ spring.jpa.hibernate.ddl-auto = update
 
 app.allow.origins=https://ptvescort.com
 
-mysql://b0ecf1ad367e57:c079c2bf@us-cdbr-east-02.cleardb.com/heroku_94182d04f0a0039?reconnect=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
