--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,8 @@ spring.servlet.multipart.max-request-size=10MB
 
 server.error.include-message=always
 server.error.include-stacktrace=never
+
+uploadDir=/Users/a/Desktop/union-systems/escort/src/main/resources/img/
+
+#/Users/a/Desktop/union-systems/escort/src/main/resources/application.properties
+
