--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,8 @@ spring.servlet.multipart.max-request-size=10MB
 server.error.include-message=always
 server.error.include-stacktrace=never
 
-uploadDir=/Users/a/Desktop/union-systems/escort/src/main/resources/img/
+uploadDir=user-photos/
 
 #/Users/a/Desktop/union-systems/escort/src/main/resources/application.properties
 
+#/Users/a/Desktop/union-systems/escort/user-photos
