--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ app.allow.origins=https://ptvescort.com
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.location=src/main/resources/user-photos/
 
 server.error.include-message=always
 server.error.include-stacktrace=never
