--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,15 +11,20 @@ spring.jpa.hibernate.ddl-auto = update
 
 app.allow.origins=https://ptvescort.com
 
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.location=src/main/resources/user-photos/
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
+
 
 server.error.include-message=always
 server.error.include-stacktrace=never
+#
 
-uploadDir=user-photos/
+file.upload-dir=./src/main/resources/static/user-photos/
 
 #/Users/a/Desktop/union-systems/escort/src/main/resources/application.properties
 
