--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 
 
+
+
 spring.datasource.url=jdbc:mysql://localhost:3306/escort
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
@@ -20,12 +22,12 @@ spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=215MB
 
 
+server.port=5050
+
 server.error.include-message=always
 server.error.include-stacktrace=never
 #
 
 file.upload-dir=./src/main/resources/static/user-photos/
 
-#/Users/a/Desktop/union-systems/escort/src/main/resources/application.properties
 
-#/Users/a/Desktop/union-systems/escort/user-photos
