--- a/pom.xml
+++ b/pom.xml
@@ -92,8 +92,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+
             </plugin>
         </plugins>
+        <finalName>escort</finalName>
     </build>
 
 </project>
