--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+
+spring.resources.static-locations=classpath:/static
+spring.mvc.static-path-pattern=/resources/**
 
 
-
-spring.datasource.url=jdbc:mysql://localhost:3306/escort
+spring.datasource.url=jdbc:mysql://localhost:3306/escort?useSSL=false
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=
