update application properties to pick railway environment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,13 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=
 
+
+#spring.datasource.url=jdbc:mysql://${Railway_Host}:${Railway_Port}/${DB_NAME}?useSSL=false
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.username=${Railway_DB_NAME}
+#spring.datasource.password=${Railway_DB_PASS}
+
+
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
