--- a/src/main/resources/application-railway.yml
+++ b/src/main/resources/application-railway.yml
@@ -5,3 +5,6 @@ spring:
     password: ${DB_PASSWORD}
     name: spring-blog
 
+app:
+  allow:
+    origins: "http://localhost:3000,http://socialappbackend-production-6002.up.railway.app/"
