--- a/src/main/resources/application-railway.yml
+++ b/src/main/resources/application-railway.yml
@@ -7,4 +7,4 @@ spring:
 
 app:
   allow:
-    origins: "http://localhost:3000/,http://socialappbackend-production-6002.up.railway.app/"
+    origins: "http://localhost:3000"
