--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.thymeleaf.enabled=true
 spring.resources.static-locations=classpath:/static
 spring.mvc.static-path-pattern=/resources/**
 
+#app.allow.origins=http://localhost:3000
+
+spring.
 
 spring.datasource.url=jdbc:mysql://localhost:3306/escort?useSSL=false
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -22,7 +25,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 
-app.allow.origins=https://ptvescort.com
+app.allow.origins=http://localhost:3000
 
 spring.servlet.multipart.enabled=true
 # Threshold after which files are written to disk.
